<resources>
    <string name="app_name">Emadmaths</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // navigation
    <string name="title_home">Home</string>
    <string name="title_plans">Plans</string>
    <string name="title_stats">Stats</string>

    // registration
    <string name="registration">Registration</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="board">Board</string>
    <string name="class_text">Class</string>
    <string name="password_8_chars">Password (at least 8 characters)</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="password_doesnt_match">Password doesn\'t match</string>
    <string name="register">Register</string>
    <string name="already_have_an_acc">Already have an account? Login!</string>

    <string name="choose_board">Choose Board</string>
    <string name="choose_class">Choose Class</string>
    <string name="ssc">SSC</string>
    <string name="cbse">CBSE</string>
    <string name="icse">ICSE</string>

    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>

    // login
    <string name="dont_have_acc">Don\'t have an account yet? Join Now!</string>
    <string name="login">Login</string>


    <!--    forgot password-->
    <string name="forgot_pass_text">Forgot Password?</string>
    <string name="forgot_pass_body">Don\'t worry. We just need your registered email address and it\'s done!</string>
    <string name="provide_email_here">Provide your registered email here</string>
    <string name="recovery_email_sent">Recovery email sent successfully! Check your Inbox.</string>
    <string name="reset_password_text">Reset Password</string>
    <string name="go_back_text">&lt; &lt; Go Back</string>
    <!--    forgot password-->

    /// home frag
    <string name="start">Start</string>
    <string name="recap">Recap</string>

    <string name="question_code" formatted="false">Question code-%1$s</string>
    <string name="question" formatted="false">%1$s. %2$s</string>


    <!--    plans fragment-->
    <string name="subscribe_type">Subscribe</string>
    <string name="subscription">Subscription</string>
    <string name="price_1_month" formatted="false">Rs. %1$s/Month</string>
    <string name="rs_month" formatted="false">Rs. %1$s (1 Month)</string>
    <string name="rs_months" formatted="false">Rs. %1$s (%2$s Months)</string>
    <string name="you_have_no_subs">You have no subscriptions now! Buy Subscriptions From Plans!</string>
    <string name="submit">Submit</string>

    <!--    on Back Pressed -->
    <string name="alert">Alert!</string>
    <string name="doubt_alert">Are you sure to add this question in the doubts?</string>
    <string name="doubt_added">To see your listed doubts, please go to Stats!</string>
    <string name="alert_on">Are you sure to exit from the exam? Without submitting, all your answers will be lost!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="process_delete" formatted="false">%1$s and it\'s all process will be terminated.</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="choose_your_chapters">Choose your chapters</string>
    <string name="select_number_of_daily_que">Select number of daily questions</string>
    <string name="all_doubts">See All Doubts</string>
    <string name="download_excel_report">Download Excel Report</string>
    <string name="daily_task">Daily Task</string>
    <string name="my_doubts">My Doubts</string>
    <string name="my_tests">My Tests</string>
    <string name="log_out">Log Out</string>
    <string name="your_all_doubts">Your All Doubts</string>
    <!--    on Back Pressed -->

</resources>